feat: added number input component

--- a/src/App.css
+++ b/src/App.css
@@ -55,11 +55,11 @@
   cursor: pointer;
 }
 
-.toggle-label {
+.label {
   z-index: 10;
 }
 
-input[type='checkbox'] {
+input[type='checkbox'], input[type="number"] {
   position: absolute;
   visibility: hidden;
 }
@@ -75,3 +75,16 @@ input[type='checkbox'] {
   background: #fff;
   cursor: pointer;
 } */
+
+.number-input {
+  background-color: cadetblue;
+  height: 24px;
+  width: 24px;
+  color: white;
+  margin: 10px 10px;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+}
